loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:1: error: not found: value sortieTrouv?e
while(!sortieTrouv?e){
       ^